2004-07-20  Matthias Clasen  <mclasen@redhat.com>

	* tests/testactions.c (main): 
	* tests/testmerge.c (main): Add some refcount debugging.

	* gtk/gtkuimanager.c (update_node, free_node): Ref an sink
	all proxies, so that we can properly clean up floating proxies
	which the app didn't adopt.  (#147926, Tommi Komulainen)

2004-07-20  Matthias Clasen  <mclasen@redhat.com>

	Allow custom initialization of cell editables.  (#147221)
	
	* gtk/gtkcellrenderer.h (struct _GtkCellRendererClass): 
	* gtk/gtkcellrenderer.c (gtk_cell_renderer_class_init): Add a 
	::editing-started signal as a hook for setting up the 
	GtkCellEditable.
	(gtk_cell_renderer_start_editing): ...and emit it here.

Mon Jul 19 23:51:50 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Set drag_pos
	before grabbing the focus, since we may reenter into 
	gtk_tree_view_motion_resize_column() which requires drag_pos
	to be set.  (#147913, Guilherme Salgado, patch by John Finlay) 

Mon Jul 19 23:51:50 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_enter_notify): Don't
	use uninitialized node pointer.  (#147911, Peter Zelezny)

Tue Jul 20 04:34:56 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* configure.in: Bump version number

Sun Jul 18 17:21:10 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* === Released 2.5.0 ===

	* NEWS: updates

	* tests/testcombo.c: Fix compilation

2004-07-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_set_popup_completion):
	Fix doc comment.
	
2004-07-19  Matthias Clasen  <mclasen@redhat.com>

	Make GtkCellView public, since people seem to have uses for it, 
	it is clean API and we were just conservative in not making it 
	public initially. At the same time, get rid of GtkCellViewMenuItem,
	which doesn't have any function which can't be served by a
	GtkMenuItem with a GtkCellView child.  (#136637, Padraig O'Briain)

	* gtk/gtk.h: Include gtkcellview.h
